$Id$

2017-04-23  Alex Samorukov  <samm@os2.kiev.ua>

	os_os2.cpp: 
         - code cleanup
         - add os2ahci driver initial support
         - fix selftest command

2017-04-19  Alex Samorukov  <samm@os2.kiev.ua>

	OS/2 - many fixes:
	 - autodetect and build os_os2.o on OS/2
	 - fix os_os2.cpp/os_os2.h compilation (thanks to franke@)
	 - get rid from the os_os/hdreg.h - use constants from the atacmd.h
	 - remove most of the dead code and unused functions

2017-04-17  Christian Franke  <franke@computer.org>

	os_win32.cpp: Decode Windows 10 1703 build number.

	atacmds.h, ataprint.cpp: Use STANDBY instead of IDLE command if
	'-s standby,[N|off]' and '-s standby,now' are both specified.
	smartctl.8.in: Document new behaviour of '-s standby,*'.

2017-04-01  Christian Franke  <franke@computer.org>

	atacmds.cpp, atacmds.h, ataprint.cpp: Print minimum supported ERC
	Time Limit from SCT Status.

	ataidentify.cpp, ataprint.cpp: Add ACS-4 and SATA 3.3 major
	versions, log pages, device statistic values and feature bits.

2017-03-27  Christian Franke  <franke@computer.org>

	scsiprint.cpp: Suppress "SAS address" if '-q noserial' is
	specified (ticket #822).

	scsicmds.cpp: Remove useless variable
	(cppcheck 1.77: knownConditionTrueFalse).

	smartd.cpp: Always suppress "failed to read Temperature" message
	if SCSI device does not support temperature (ticket #817).
	Fix initial check for SCSI temperature support.
	Log SCSI temperature regardless of its origin.

2017-03-11  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in,
	update-smart-drivedb.8.in: Update EXPERIMENTAL notes.
	Update links.  Update or remove various outdated info.

	smartctl.8.in: Fix documentation of the '-g all' option.

	smartctl.cpp: Add '-g dsn' to '-x' output.

2017-03-11  Jonghwan Choi  <jhbird.choi@gmail.com>

	ataprint.cpp: Fix false positive DSN support detection.

2017-03-09  Jean Delvare  <...>

	smartctl.8.in: Fix documentation of the '-q' option.
